# Homework_19.2

./: .env.sample  .gitignore  README.md  grops.json  pyproject.toml  requirements.txt
blog/: models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_title.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_price.py  0003_version.py  0004_product_owner.py  0005_product_is_published.py  0006_alter_product_options.py  0007_alter_product_is_published.py
catalog/templates/: base.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: change_password.html  user_form.html
