[tool.poetry]
name = "homework_19.2"
version = "0.1.0"
description = ""
authors = ["kkatka <kkatka@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.1"
psycopg2-binary = "^2.9.9"
black = "^24.8.0"
pillow = "^10.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
